lab-10/phpmyadmin/phpmyadmin-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    run: phpmyadmin
  name: phpmyadmin
  namespace: phpmyadmin
spec:
  replicas: 1
  selector:
    matchLabels:
      run: phpmyadmin
  template:
    metadata:
      labels:
        run: phpmyadmin
    spec:
      containers:
      - image: phpmyadmin:5.0.2
        name: phpmyadmin
        ports:
        - name: tcp
          containerPort: 80
