lab-10/phpmyadmin/phpmyadmin-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: phpmyadmin
  namespace: phpmyadmin
spec:
  selector:
    run: phpmyadmin
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
