lab-10/phpmyadmin/phpmyadmin-ingress.yaml
kind: Ingress
metadata:
  name: phpmyadmin
  namespace: phpmyadmin 
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: phpmyadmin.lab.com
    http:
      paths:
      - path: /
        backend:
          serviceName: phpmyadmin
          servicePort: 80
apiVersion: networking.k8s.io/v1beta1
